--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "vuejs-babel-todolist",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --stats-error-details --config=webpack.config.js",
-    "watch": "webpack -w"
+    "watch": "webpack -w --config=webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,8 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "vue": "^3.2.36"
+    "vue": "^3.2.36",
+    "vuex": "^4.0.2"
   },
   "private": true
 }
