--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --stats-error-details --config=webpack.config.js",
+    "build": "webpack --stats-error-details --config=webpack.config.js && npm run copy:html && npm run copy:css && npm run copy:icon",
+    "copy:html": "cpx \"./src/index.html\" \"./dist/\"",
+    "copy:css": "cpx \"./css/**/*\" \"./dist/css/\"",
+    "copy:icon": "cpx \"./favicon.ico\" \"./dist/\"",
     "watch": "webpack -w --config=webpack.config.js"
   },
   "repository": {
@@ -23,7 +26,9 @@
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
     "core-js": "^3.22.8",
+    "cpx": "^1.5.0",
     "vue-loader": "^17.0.0",
+    "vue-router": "^4.0.15",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
